--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,9 @@ html, body {
 body {
     font-family: "Nunito", sans-serif;
     text-align: center;
-    background: rgba(235, 235, 235, 0.9);
+    background: #eceeed;
 }
+
 
 header {
     padding: 15px 5px 5px;
@@ -30,21 +31,22 @@ header {
 
 header h1 {
     font-size: 1.25em;
-    color: rgba(50, 50, 50, 0.9);
+    color: #40cda9;
     margin-top: 35px;
 }
 
 .search-input {
     padding: 0.4rem 1rem;
-    border: 1px solid rgba(200, 200, 200, 0.9);
+    border: 1px solid #01e5b8;
     border-radius: 0.25rem 0 0 0.25rem ;
     max-width: 20rem;
     transition: .4s ease-out;
     outline: none;
+    background: rgba(0, 0, 0, 0.1);
 }
 
 .search-input:active, .search-input:hover, .search-input:focus {
-    border: 1px solid rgba(50, 50, 50, 0.9);
+    background: #fff;
 }
 
 .search-submit {
@@ -52,14 +54,13 @@ header h1 {
     height: 33px;
     background: rgba(245, 245, 245, 0.9);
     border-radius: 0 0.25rem 0.25rem 0;
-    border: 1px solid rgba(200, 200, 200, 0.9);
+    border: 1px solid #01e5b8;
     transition: .4s ease-out;
     outline: none;
 }
 
 .search-submit:active, .search-submit:hover, .search-submit:focus {
     background: rgba(255, 255, 255, 0.9);
-    border: 1px solid rgba(50, 50, 50, 0.9);
 }
 
 
@@ -87,9 +88,8 @@ header h1 {
     max-width: 360px;
     margin: 10px 10px 20px;
     padding: 10px;
-    background: rgba(245, 245, 245, 0.9);
     border-radius: 0.25em;
-    border: 1px solid rgba(50, 50, 50, 0.3);
+    border: 2px solid #40cda9;
     transition: .4s ease-out;
     overflow: hidden;
 }
@@ -140,9 +140,9 @@ header h1 {
     min-height: 415px;
     margin: 10px auto auto;
     padding-bottom: 20px;
-    background: rgba(255, 255, 255, 1);
+    background: #fff;
     border-radius: 0.25em;
-    border: 1px solid rgba(100, 100, 100, 0.3);
+    border:2px solid #40cda9;
     transition: .4s ease-out;
 }
 
@@ -152,7 +152,7 @@ header h1 {
     right: 15px;
     cursor: pointer;
     color: rgba(255, 255, 255, 0.9);
-    background: rgba(0, 0, 0, 0.8);
+    background:#800000;
     outline: none;
     border-radius: 0.25em;
     border: 1px solid rgba(50, 50, 50, 0.3);
@@ -175,8 +175,6 @@ header h1 {
 
 .modal hr {
     width: 75%;
-    margin: 25px auto 30px;
-    border-color: rgba(200, 200, 200, 0.2);
 }
 
 .modal-btn-container {
@@ -188,9 +186,9 @@ header h1 {
     max-width: 420px;
     padding: 10px 15px 15px;;
     margin: 10px auto auto;
-    background: rgba(255, 255, 255, 1);
+    background-color: #fff;
     border-radius: 0.25em;
-    border: 1px solid rgba(100, 100, 100, 0.3);
+    border: 2px solid #40cda9;
 }
 
 
@@ -198,12 +196,14 @@ header h1 {
     display: inline-block;
     cursor: pointer;
     font-size: 0.85em;
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-transform: uppercase;
-    color: rgba(255, 255, 255, 0.9);
+    color: #000;
     padding: 0.75em 1.5em;
-    background: rgba(0, 0, 0, 0.8);
-    border-radius: 0.35em;
+    border:1px solid #40cda9;
     transition: .4s ease-out;
+    background: radial-gradient(#fff,#01e5b8);
     outline: none;
   }
   
@@ -249,7 +249,7 @@ header h1 {
 
     .card:hover {
         background: rgba(255, 255, 255, 1);
-        border: 1px solid rgba(50, 50, 50, 0.9);
+        box-shadow: 3px 3px #01e5b8;
     }
 
     .card:hover .card-text {
